--- a/com.dynamo.cr.sceneed.test/pom.xml
+++ b/com.dynamo.cr.sceneed.test/pom.xml
@@ -19,6 +19,26 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>sh</executable>
+                    <arguments>
+                        <argument>scripts/build_proto.sh</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.sonatype.tycho</groupId>
                 <artifactId>maven-osgi-test-plugin</artifactId>
                 <version>${tycho-version}</version>
