--- a/com.dynamo.cr.go/plugin.xml
+++ b/com.dynamo.cr.go/plugin.xml
@@ -426,7 +426,7 @@
             default="true"
             extensions="collection"
             icon="icons/bricks.png"
-            id="com.dynamo.cr.go.ui.collectionEditor"
+            id="com.dynamo.cr.contenteditor.editors.CollectionEditor"
             name="Scene Editor">
       </editor>
    </extension>
