Removed specific node deletion, replaced by general. case 714

--- a/com.dynamo.cr.sceneed/plugin.xml
+++ b/com.dynamo.cr.sceneed/plugin.xml
@@ -373,6 +373,17 @@
             </reference>
          </activeWhen>
       </handler>
+      <handler
+            class="com.dynamo.cr.sceneed.handlers.DeleteNodesHandler"
+            commandId="org.eclipse.ui.edit.delete">
+         <activeWhen>
+            <and>
+               <reference
+                     definitionId="com.dynamo.cr.sceneed.definitions.selectionDeleteable">
+               </reference>
+            </and>
+         </activeWhen>
+      </handler>
    </extension>
    <extension
          point="org.eclipse.core.expressions.definitions">
