Fixed copy-paste according to new design. case 684

--- a/com.dynamo.cr.sceneed.test/plugin.xml
+++ b/com.dynamo.cr.sceneed.test/plugin.xml
@@ -27,6 +27,9 @@
       <node-type
             id="com.dynamo.cr.sceneed.test.dummyChild"
             node="com.dynamo.cr.sceneed.core.test.DummyChild">
+         <reference-node-type
+               node-type="com.dynamo.cr.sceneed.test.dummyChild">
+         </reference-node-type>
       </node-type>
    </extension>
    <extension
