--- a/editor.properties
+++ b/editor.properties
@@ -11,6 +11,8 @@ topLevelElementType = foobar
 
 launcherName=Defold
 
+# root.properties is generated from build-editor.sh
+generatedBuildProperties = ${buildDirectory}/root.properties
 
 ############# PRODUCT/PACKAGING CONTROL #############
 product=com.dynamo.cr.editor/cr.product
