Temporarily disabled jre packaging. The jre:s are broken. (Missing bin/*). We probably have to copy symbolic links as well, i.e. make copies of the files. case 738

--- a/editor.properties
+++ b/editor.properties
@@ -12,7 +12,7 @@ topLevelElementType = foobar
 launcherName=Defold
 
 # root.properties is generated from build-editor.sh
-generatedBuildProperties = ${buildDirectory}/root.properties
+#generatedBuildProperties = ${buildDirectory}/root.properties
 
 ############# PRODUCT/PACKAGING CONTROL #############
 product=com.dynamo.cr.editor/cr.product
